BOOM-2416 switch to swagger android template